--- a/src/features/collections/jsCourseView/ui/JsCourseCollectionsView.module.scss
+++ b/src/features/collections/jsCourseView/ui/JsCourseCollectionsView.module.scss
@@ -410,6 +410,7 @@
   .cardsGrid {
     grid-template-columns: minmax(0, 1fr);
     gap: 14px;
+    justify-items: center;
   }
 }
 
